added all tweets

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#welcome</h1>
-<p>Find me in app/views/static_pages/welcome.html.erb</p>
+<h1>Welcome to Tweeter</h1>
+<p>Home of the world's most irrelevant Tweets</p>
