--- a/app/views/layouts/tweeter.html.erb
+++ b/app/views/layouts/tweeter.html.erb
@@ -46,17 +46,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Tweeter</a>
+          <%= link_to "Tweeter", root_path, class: "brand" %>
           <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <% if user_logged_in? %>
-                <li><%= link_to "My Account", edit_user_registration_path %></li>
-                <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to "Login", new_user_session_path  %></li>
-                <li><%= link_to "Signup", new_user_registration_path  %></li>
-              <% end %>
-            </ul>
+            
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -64,39 +56,64 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span4">
-          <div class="well sidebar-nav">
-           
-              <%= form_for(@tweet) do |f| %>
-            <p>
-              <%= f.label(:tweet) %>
-              <%= f.text_field(:content) %>
-            </p>
-            <p>
-              <%=f.submit('Post Tweet') %>
-            </p>
-             <% end %>
-
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span7">
-           <div class="well"> 
-           <!--  <p class="notice"><%= notice %></p>
-            <p class="alert"><%= alert %></p> -->
-            <%= bootstrap_flash %>
-            <%= yield %>
-          
-            <% @tweets.each do |tweet| %>
-            <div class="content">
-               <%= tweet %>
-            </div>
-            <% end %>
-
-
-          </div><!--/.well -->
+        
+        <div class="offset1 span7">
+          <!-- <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p> -->
+          <%= bootstrap_flash %>
+          <%= yield %>
         </div>
-      </div><!--/row-->
+        
+        <div class="span4">
+            <div class="well sidebar-nav">
+              <div class="row-fluid">
+                <h2>Sign in</h2>
 
+                  <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+                    <div><%= f.label :email %><br />
+                  <%= f.email_field :email, :autofocus => true %></div>
+
+                    <div><%= f.label :password %><br />
+                  <%= f.password_field :password %></div>
+
+                  <% if devise_mapping.rememberable? -%>
+                      <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+                  <% end -%>
+
+                    <div><%= f.submit "Sign in" %></div>
+                  <% end %>
+
+                  <%= render "devise/shared/links" %>
+            </div>
+            </div><!--/.well -->
+
+
+            <div class="well sidebar-nav">
+              <div class="row-fluid">   
+               <h2>Sign up</h2>
+
+                <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+                  <%= devise_error_messages! %>
+
+                  <div><%= f.label :email %><br />
+                  <%= f.email_field :email %></div>
+
+                  <div><%= f.label :password %><br />
+                  <%= f.password_field :password %></div>
+
+                  <div><%= f.label :password_confirmation %><br />
+                  <%= f.password_field :password_confirmation %></div>
+
+                  <div><%= f.submit "Sign up" %></div>
+                <% end %>
+
+              </div>
+            </div><!--/.well -->
+        </div><!--/span-->
+
+
+      </div><!--/row-->
+      
       <footer>
         <p>&copy; Company 2014</p>
       </footer>
