--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,10 +8,15 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
+
  *= require_tree .
+ *= require_self
  */
 
  .well {
   background-color: lightblue;
+ }
+
+ body {
+    background-color: #DCDCDC;
  }
