--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,29 +38,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Tweeter</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <% if user_logged_in? %>
-                <li><%= link_to "My Account", edit_user_registration_path %></li>
-                <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-              <% else %>
-                <li><%= link_to "Login", new_user_session_path  %></li>
-                <li><%= link_to "Signup", new_user_registration_path  %></li>
-              <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    
 
     <div class="container-fluid">
       
@@ -68,10 +46,11 @@
         <%= yield %>
 
     </div> <!-- /container -->
-
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
-
+    <div class="clearfix" ></div>
+      <div class="offset1">
+        <footer>
+          <p>&copy; Company 2014</p>
+        </footer>
+      </div>
   </body>
 </html>
